# pwgen

./: .gitignore  README.md  pyproject.toml  tests.py
.github/workflows/: test.yml
pwgen/: __init__.py  __main__.py  core.py
