[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pwgen"
version = "1.0.0"
description = "Secure password generator — random, memorable, configurable"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "neocrev" }]
keywords = ["password", "generator", "cli", "security", "utility"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/neocrev/pwgen"
Source = "https://github.com/neocrev/pwgen"

[project.scripts]
pwgen = "pwgen.__main__:main"

[tool.setuptools.packages.find]
include = ["pwgen*"]
